<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView android:text="@string/status" android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ISRemote_address_limited"
            android:id="@+id/checkBox"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_ip"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="1"
        android:maxLines="3"
        android:gravity="bottom|left"
        android:lines="3" />

    <Space
        android:layout_width="20px"
        android:layout_height="30dp"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/button"
                android:layout_gravity="center_vertical|left|top"
            android:layout_weight="2" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:id="@+id/button2"
                android:layout_gravity="center_vertical|right|top"
            android:layout_weight="2" />
    </LinearLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

</LinearLayout>



